feat: insere função para retornar dados de imagem de CBIS-DDSM: Breast Cancer Image Dataset

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,8 +13,65 @@
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers, models\n",
         "from tensorflow.keras.datasets import mnist\n",
-        "import tensorflow_datasets as tfds\n"
+        "import tensorflow_datasets as tfds\n",
+        "import kagglehub\n",
+        "import os"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Path de imagens\n",
+        "DATA_DIR = 'data/images/raw'\n",
+        "\n",
+        "# Download do dataset CBIS-DDSM do Kaggle\n",
+        "def download_breast_cancer_dataset():\n",
+        "    if os.path.exists(DATA_DIR) and os.listdir(DATA_DIR):\n",
+        "        files = os.listdir(DATA_DIR)\n",
+        "        has_data = any(\n",
+        "            f.endswith('.csv') or os.path.isdir(os.path.join(DATA_DIR, f)) \n",
+        "            for f in files\n",
+        "        )\n",
+        "        \n",
+        "        if has_data:\n",
+        "            return DATA_DIR\n",
+        "    \n",
+        "    try:\n",
+        "        dataset_path = kagglehub.dataset_download(\"awsaf49/cbis-ddsm-breast-cancer-image-dataset\")\n",
+        "        if os.path.exists(dataset_path):\n",
+        "            if os.path.isdir(dataset_path):\n",
+        "                files_count = len(os.listdir(dataset_path))\n",
+        "                if files_count > 0:\n",
+        "                    return dataset_path\n",
+        "                else:\n",
+        "                    return None\n",
+        "            else:\n",
+        "                return dataset_path\n",
+        "        else:\n",
+        "            return None\n",
+        "            \n",
+        "    except Exception as e:\n",
+        "        print(f\"Erro ao baixar dataset: {e}\")\n",
+        "        return None\n",
+        "\n",
+        "dataset_path = download_breast_cancer_dataset()\n",
+        "\n",
+        "if not dataset_path:\n",
+        "    print(\"Não foi possível obter o dataset. Verifique as mensagens acima.\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
