fix: correção de texto

--- a/main.ipynb
+++ b/main.ipynb
@@ -76,7 +76,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Vamos carregar apenas 10 imagens do dataset para um treino simples do CNN\n"
+        "Vamos carregar as imagens do dataset para um treino simples do CNN\n"
       ]
     },
     {
